[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes_and_Scripts/GameCore/GameLayers.gd" type="Script" id=1]
[ext_resource path="res://Scenes_and_Scripts/GameCore/ColorLayer.tscn" type="PackedScene" id=2]

[node name="GameLayers" type="Node"]

script = ExtResource( 1 )

[node name="ColorLayer" parent="." index="0" instance=ExtResource( 2 )]

[node name="ColorLayer2" parent="." index="1" instance=ExtResource( 2 )]

visible = false

[node name="ColorLayer3" parent="." index="2" instance=ExtResource( 2 )]

visible = false


